인코딩 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="Author" content="">
   <meta name="Keywords" content="">
   <meta name="Description" content="">
+  <meta charset="UTF-8">
  </head>
 
  <body>
