--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  <body>
    <h1>git 연습입니다.</h1>
-   <h1>git 연습2입니다.</h1>
+   <h1>git 2입니다.</h1>
    <h1>git 연습3입니다.</h1>
    <li>sync.sskim2</li>
    <li>실험2 추가</li>
